language/tests/error/InvalidAssignmentInAssignment.hashem
bebin main() {
  x = 42 = 42;
}